# onc-toolbox

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: sphinx.yml
ONCToolbox/: __init__.py  core.py  qaqc.py
ONCToolbox/utils/: climatology.py  core.py  ferries.py  locations.py  profilers.py  suna.py  token.py
doc/_source/: index.rst  onc-toolbox.rst
examples/: drifter.ipynb  icepro.ipynb
examples/BACVP/: BACVP_CTD_QAQC.ipynb  BACVP_split.ipynb  BACVP_suna_spectra.ipynb
examples/TWDP/: TWDP_TSG.ipynb
examples/TWSB/: TWSB_nrt.ipynb
examples/adcp/: sevip_adcp.ipynb
examples/bacvp/: bacvp_camera_opencv.ipynb  bacvp_ctd_up_profiles.ipynb
examples/bacvp/suna/: bacvp_ctd_up_profiles2.ipynb
examples/bc_ferries/: twsb_thermosalinograph.ipynb
examples/bcferry/: twsb_thermosalinograph.ipynb
examples/cbyip/: icepro.ipynb
examples/echosounder/: sevip_echosounderbioa.ipynb
examples/hf_radar/: sogcs.ipynb
examples/vps/suna/: suna_archive_file_parser.ipynb  suna_ctd_combo.ipynb
src/ONCToolbox/: __init__.py  conversions.py  core.py  logger.py  nc.py  qaqc.py
src/ONCToolbox/utils/: __init__.py  colors.py  core.py  ferries.py  locations.py  profilers.py  suna.py
